[build-system]
requires = [
    "poetry>=0.12",
]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "envrpt"
version = "0.2.0"
description = "Analyzes the packages installed in a Python environment"
authors = [
    "Jason Simeone <jay@classless.net>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jayclassless/envrpt"
keywords = [
    "package",
    "dependency",
    "analysis",
    "virtual environment",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
]
include = [
    "CHANGES.rst",
]

[tool.poetry.dependencies]
python = "^3.6"
pip = ">=10"

[tool.poetry.dev-dependencies]
# tidypy = "*"

[tool.poetry.scripts]
envrpt = "envrpt.cli:main"


[tool.tidypy]
exclude = [
    'test/.*',
    'build/.*',
    'dist/.*',
    '.pytest_cache/.*',
    'src/envrpt/_vendor/.*',
    'js/*',
    '^poetry.lock',
]
pydocstyle = {use = false}

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
    'E731',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
    'trailing-newlines',
    'duplicate-code',
]
[tool.tidypy.pylint.options]
min-public-methods = 0

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
    'line-length',
]

